# GeometryBaseTools

./: .gitignore  CMakeLists.txt  CMakePresets.json  geometry_tool.h  readme.md
include/base/: dbl_compare.h
include/geo/: dbl_compare.h  line.h  point_2D.h  triangle.h  vector_2D.h
include/geo_2D/: circle_2D.h  edge_2D.h  point_2D.h  segment_2D.h  triangle_2D.h  vector_2D.h
src/geo_2D/: circle_2D.cpp  edge_2D.cpp  point_2D.cpp  segment_2D.cpp  triangle_2D.cpp  vector_2D.cpp
